fixed overlap on css

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -4,8 +4,30 @@
 }
 
 nav{
-    margin-bottom: 10em;
-    position: relative;
+    margin-bottom: .5em;
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+@media (max-width: 470px) {
+    nav{
+      
+        display: flex;
+        flex-flow: column;
+    }
+
+    main{
+        display: flex;
+    }
+    form{
+        width: auto;
+        
+    }
+
+    li{
+        width: auto;
+    }
 }
 
 
@@ -15,20 +37,21 @@ nav{
 }
 
  header{
-    margin-bottom: 1em;
+
     padding:auto;
-    height:50px;
+    height:100%;
     width:100%;
     text-align:center;
     font-size: 3rem;
     background-color: #a3b4a2;
+    
 } 
  main{
     height:100%;
-    width:100%;
+    width: auto;
     align-content: center;
     display:flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
@@ -38,9 +61,19 @@ nav{
     background-size: cover;
  
 } 
+
+.newMain{
+    align-content: center;
+    display:flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
  body{
     width:100%;
-    height:90%; 
+    height:auto; 
     justify-content: center;
     background-color: #cdc6ae;
 }
@@ -62,7 +95,8 @@ li{
     display: flex;
     align-items: center ;
     flex-flow: column;
-    width: 500px;
+    width: 25rem;
+    height: auto;
     text-align: center;
     margin: auto;
     padding:auto;
@@ -120,13 +154,13 @@ section{
 
 @keyframes colors{
     0%{
-        background-color: rgb(125, 185, 125);
+        background-color: rgb(164,180,162);
     }
     50%{
-        background-color: rgba(124, 65, 180, 0.65);
+        background-color: rgba(167, 145, 104, 0.685);
     }
     100%{
-        background-color: rgb(125, 185, 125);
+        background-color: rgb(164,180,162);
     }
 }
 
@@ -144,6 +178,10 @@ section{
 
 }
 
+#saveForm{
+    overflow: auto;
+    width: 100%;
+}
 
 #expand{
     display: none;
